added favicon & new title

--- a/jstute.html
+++ b/jstute.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title> JS Tute page </title>
+		<title> JS Tute page - Let's have some fun! </title>
+		<link rel="icon" type="image/x-icon" href="images/favicon.ico"
 	</head>
 	<body>
 		<h1>Simple page for JS tutes</h1>
