--- a/jstute.html
+++ b/jstute.html
@@ -33,6 +33,6 @@
 		</div>
 
 	</body>
-	<script src="jquery-3.1.1.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="myscript.js"></script>
 </html>
